# ai-

./: .env   README.md  config.yaml   main.py  promt.txt  pyproject.toml  requirements.txt
docs/: architecture.md  dev_guide.md  user_guide.md
scripts/: deploy.sh  setup_jarvis.sh  start.sh  train_custom_model.py
src/: main_controller.py
src/ai_core/: babyagi_agent.py  hacking_lab.py  image_processing.py  init.py  model_integration.py  real_time_learning.py  self_improvement.py  video_processing.py  voice_processing.py  web_browsing.py  web_scraping.py
src/database/: user_data.py
src/gui/: __init__.py  main_window.py  voice_gui.py
src/gui/web_interface/: index.html
src/platform_integration/: init.py  linux_automation.py  mac_automation.py  system_control.py  windows_automation.py
src/security/: __init__.py  ai_security.py  network_security.py
src/task_management/: babyagi_agent.py  init.py  task_scheduler.py
src/training/: dataset_loader.py  init.py  train_model.py
src/utils/: config.py  error_handler.py  file_processor.py  helper_functions.py  model_manager.py
test/: test_ai_core.py  test_gui.py  test_voice.py
